# snyk

./: .copier-answers.yml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yaml
api_spec/: v1-api-spec.yaml  v2-rest-api-spec.json
api_spec/decomposed/: manifest.json
api_spec/decomposed/chunks/: domain_accessrequests.json  domain_aibom_part1.json  domain_aibom_part2.json  domain_apps_part1.json  domain_apps_part2.json  domain_asset.json  domain_audit_logs.json  domain_brokerconnections_part1.json  domain_brokerconnections_part2.json  domain_brokerconnections_part3.json  domain_brokerconnections_part4.json  domain_brokerconnections_part5.json  domain_brokerconnections_part6.json  domain_brokerconnections_part7.json  domain_brokerdeployments_part1.json  domain_brokerdeployments_part2.json  domain_brokerdeployments_part3.json  domain_catalog_resource.json  domain_cloud.json  domain_collection.json  domain_containerimage.json  domain_containerregistryimportpolicy.json  domain_custom_base_images.json  domain_deploymentcredentials_part1.json  (+32 more)
api_spec/v1_decomposed/: manifest.json
docs/jekyll/: _config.yml
docs/python/: build.py  config.json  update_manifest.py
src/clearskies_snyk/: __init__.py
tests/: __init__.py  test_sample.py
tests/backends/: test_snyk_backend.py  test_snyk_v1_backend.py  test_snyk_v1_import_backend.py
tests/columns/: test_project_tag_list.py
tests/fixtures/: __init__.py  api_responses.py  schemas.py
tests/unit/: test_default_snyk_auth.py
tests/validation/: test_all_models_spec_compliance.py  test_spec_compliance.py
tools/: check_spec_compliance.py  prompt_templates.py  spec_decomposer.py  v1_spec_decomposer.py
(+159 files in other folders)
