[project]
name = "clear-skies-snyk"
description = "Snyk module for Clearskies"
version = "2.0.2"
license = "MIT"
readme = "./README.md"
authors = [{name = "Tom Nijboer", email = "tom.nijboer@cimpress.com"}]
requires-python = ">=3.11,<4.0"
dependencies = [
    "clear-skies>=2.0.37,<3.0.0",
    "dacite>=1.9.2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers"
]

[project.urls]
Docs = "https://https://clearskies.info/modules/clear-skies-snyk"
Repository = "https://github.com/clearskies-py/snyk"
Issues = "https://github.com/clearskies-py/snyk/issues"
Changelog = "https://github.com/clearskies-py/snyk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "types-requests>=2.32.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clearskies_snyk"]

[tool.hatch.build]
exclude = [
    "src/clearskies_snyk/*_test.py",
    "src/clearskies_snyk/**/*_test.py",
    "src/clearskies_snyk/integration_tests/*",
    "docs/**",
    "tests/**"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
pythonpath = [
  "src"
]

# This is the dedicated section for uv's configuration
[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.3",
    "ruff>=0.12.10",
    "types-pyyaml>=6.0.12",
]
doc = [
    "clear-skies-doc-builder>=2.0.11",
]
